fix form label default align

--- a/base-components/fusion-theme/xconsole/next.var.css
+++ b/base-components/fusion-theme/xconsole/next.var.css
@@ -1,5 +1,5 @@
 /*!
- * @alife/theme-xconsole-v4@0.8.1 (https://fusion.design)
+ * @alife/theme-xconsole-v4@0.8.3 (https://fusion.design)
  * @alifd/next@1.22.7 (https://fusion.design)
  * Copyright 2018-present Alibaba Group,
  * Licensed under MIT (https://github.com/alibaba-fusion/next/blob/master/LICENSE)
@@ -28538,14 +28538,6 @@ div[dir="rtl"] .next-calendar2-table-week .next-calendar2-week-current .next-cal
 .next-icon-arrow__up::before {
   content: "\E77E";
   content: var(--icon-content-arrow__up, "\E77E"); }
-
-.next-icon-arrow_right::before {
-  content: "\E77F";
-  content: var(--icon-content-arrow_right, "\E77F"); }
-
-.next-icon-arrow_left::before {
-  content: "\E780";
-  content: var(--icon-content-arrow_left, "\E780"); }
 
 .next-icon-button_left::before {
   content: "\E781";
